--- a/smart_packages/smart_signal_processing/pubspec.yaml
+++ b/smart_packages/smart_signal_processing/pubspec.yaml
@@ -5,10 +5,8 @@ homepage: https://github.com/timmaffett/smart_packages
 publish_to: none
 environment:
   sdk: '>=2.19.0 <4.0.0'
+
 dependencies:
-  build_runner: ^2.0.0
-  build_web_compilers: ^3.0.0
-  lints: ^2.0.1
   smart_arrays_base: #^3.0.0
     path: ../../smart_arrays_base
   smart_arrays_plot_polyline: #^3.0.0
@@ -17,3 +15,9 @@ dependencies:
     path: ../../smart_arrays_sample_data
   smart_signal_processing: #^3.0.0
     path: ../../smart_signal_processing
+
+dev-dependencies:
+  build_runner: ^2.0.0
+  build_web_compilers: ^3.0.0
+  lints: ^2.0.1
+  
